@@ -62,9 +62,11 @@ class Object {
     }
     
     public function super($arguments = null) {
-        $caller = array_pop(array_slice(debug_backtrace(), 1, 1));
         $arguments = func_get_args();
-        if ($this->respond_to($caller['function'])) {
+        $caller = array_pop(array_slice(debug_backtrace(), 1, 1));
+        if (empty($caller)) {
+            trigger_error(get_class($this).'::super() must be called from inside of an instance method', E_USER_ERROR);
+        } else if ($this->respond_to($caller['function'])) {
             return $this->send($caller['function'], $arguments);
         } else {
             return eval($this->build_method_call($caller['function'], 'parent', $arguments));
